--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "portfolio",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.0",     
+
+"homepage": "https://adiba2005.github.io/my-portfolio",
+    
   "type": "module",
   "scripts": {
     "dev": "vite",
